trunk/WaatScenarioCore/src/br/com/ceut/waat/scenarios/ScenarioParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g 2009-10-25 23:36:59

	package br.com.ceut.waat.scenarios;
	import br.com.ceut.waat.scenarios.rules.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class ScenarioParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "INT", "ACTOR", "ACTION", "ID", "NEWLINE", "WHITESPACE", "'Cenario'", "'-'", "'\"'", "':'", "'Pre-Condicao:'", "';'", "'Executar'", "'.'", "'Ha'", "'caminhos'", "')'", "'valida'", "'{'", "'}'", "','", "'Link'", "'sessao'", "'Campo'", "'Select'", "'Botao'", "'Formulario'", "'Atributos'", "'Mensagem'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int WHITESPACE=9;
    public static final int INT=4;
    public static final int ID=7;
    public static final int EOF=-1;
    public static final int ACTION=6;
    public static final int T__30=30;
    public static final int T__19=19;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__16=16;
    public static final int T__15=15;
    public static final int NEWLINE=8;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int ACTOR=5;
    public static final int T__10=10;

    // delegates
    // delegators


        public ScenarioParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ScenarioParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ScenarioParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g"; }


    public static class scenario_return extends ParserRuleReturnScope {
        public Scenario r_scenario;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "scenario"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:12:1: scenario returns [Scenario r_scenario] : 'Cenario' number= INT '-' '\"' name= multiWordID '\"' ':' (precondition= preCondition )? steplist= stepList ;
    public final ScenarioParser.scenario_return scenario() throws RecognitionException {
        ScenarioParser.scenario_return retval = new ScenarioParser.scenario_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token number=null;
        Token string_literal1=null;
        Token char_literal2=null;
        Token char_literal3=null;
        Token char_literal4=null;
        Token char_literal5=null;
        ScenarioParser.multiWordID_return name = null;

        ScenarioParser.preCondition_return precondition = null;

        ScenarioParser.stepList_return steplist = null;


        Object number_tree=null;
        Object string_literal1_tree=null;
        Object char_literal2_tree=null;
        Object char_literal3_tree=null;
        Object char_literal4_tree=null;
        Object char_literal5_tree=null;

        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:13:2: ( 'Cenario' number= INT '-' '\"' name= multiWordID '\"' ':' (precondition= preCondition )? steplist= stepList )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:13:4: 'Cenario' number= INT '-' '\"' name= multiWordID '\"' ':' (precondition= preCondition )? steplist= stepList
            {
            root_0 = (Object)adaptor.nil();

            string_literal1=(Token)match(input,10,FOLLOW_10_in_scenario32); 
            string_literal1_tree = (Object)adaptor.create(string_literal1);
            adaptor.addChild(root_0, string_literal1_tree);

            number=(Token)match(input,INT,FOLLOW_INT_in_scenario36); 
            number_tree = (Object)adaptor.create(number);
            adaptor.addChild(root_0, number_tree);

            char_literal2=(Token)match(input,11,FOLLOW_11_in_scenario38); 
            char_literal2_tree = (Object)adaptor.create(char_literal2);
            adaptor.addChild(root_0, char_literal2_tree);

            char_literal3=(Token)match(input,12,FOLLOW_12_in_scenario40); 
            char_literal3_tree = (Object)adaptor.create(char_literal3);
            adaptor.addChild(root_0, char_literal3_tree);

            pushFollow(FOLLOW_multiWordID_in_scenario44);
            name=multiWordID();

            state._fsp--;

            adaptor.addChild(root_0, name.getTree());
            char_literal4=(Token)match(input,12,FOLLOW_12_in_scenario46); 
            char_literal4_tree = (Object)adaptor.create(char_literal4);
            adaptor.addChild(root_0, char_literal4_tree);

            char_literal5=(Token)match(input,13,FOLLOW_13_in_scenario48); 
            char_literal5_tree = (Object)adaptor.create(char_literal5);
            adaptor.addChild(root_0, char_literal5_tree);

            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:13:71: (precondition= preCondition )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==14) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:13:71: precondition= preCondition
                    {
                    pushFollow(FOLLOW_preCondition_in_scenario53);
                    precondition=preCondition();

                    state._fsp--;

                    adaptor.addChild(root_0, precondition.getTree());

                    }
                    break;

            }

            pushFollow(FOLLOW_stepList_in_scenario58);
            steplist=stepList();

            state._fsp--;

            adaptor.addChild(root_0, steplist.getTree());
             
            			if(precondition != null) {
            				retval.r_scenario = new Scenario(Integer.parseInt(number.getText()), name.r_multiwordid, precondition.r_precondition, steplist.r_steplist); 
            			} else {
            				retval.r_scenario = new Scenario(Integer.parseInt(number.getText()), name.r_multiwordid, null, steplist.r_steplist); 
            			}
            		

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "scenario"

    public static class preCondition_return extends ParserRuleReturnScope {
        public PreCondition r_precondition;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "preCondition"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:23:1: preCondition returns [PreCondition r_precondition] : 'Pre-Condicao:' preconditionsteplist= preConditionStepList ;
    public final ScenarioParser.preCondition_return preCondition() throws RecognitionException {
        ScenarioParser.preCondition_return retval = new ScenarioParser.preCondition_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal6=null;
        ScenarioParser.preConditionStepList_return preconditionsteplist = null;


        Object string_literal6_tree=null;

        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:24:2: ( 'Pre-Condicao:' preconditionsteplist= preConditionStepList )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:24:4: 'Pre-Condicao:' preconditionsteplist= preConditionStepList
            {
            root_0 = (Object)adaptor.nil();

            string_literal6=(Token)match(input,14,FOLLOW_14_in_preCondition77); 
            string_literal6_tree = (Object)adaptor.create(string_literal6);
            adaptor.addChild(root_0, string_literal6_tree);

            pushFollow(FOLLOW_preConditionStepList_in_preCondition81);
            preconditionsteplist=preConditionStepList();

            state._fsp--;

            adaptor.addChild(root_0, preconditionsteplist.getTree());
             retval.r_precondition = new PreCondition(preconditionsteplist.r_preconditionsteplist); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "preCondition"

    public static class preConditionStepList_return extends ParserRuleReturnScope {
        public List<PreConditionStep> r_preconditionsteplist;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "preConditionStepList"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:28:1: preConditionStepList returns [List<PreConditionStep> r_preconditionsteplist] : (preconditionstep= preConditionStep )+ ;
    public final ScenarioParser.preConditionStepList_return preConditionStepList() throws RecognitionException {
        ScenarioParser.preConditionStepList_return retval = new ScenarioParser.preConditionStepList_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ScenarioParser.preConditionStep_return preconditionstep = null;



         retval.r_preconditionsteplist = new ArrayList<PreConditionStep>(); 
        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:30:2: ( (preconditionstep= preConditionStep )+ )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:30:4: (preconditionstep= preConditionStep )+
            {
            root_0 = (Object)adaptor.nil();

            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:30:4: (preconditionstep= preConditionStep )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==11) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:30:5: preconditionstep= preConditionStep
            	    {
            	    pushFollow(FOLLOW_preConditionStep_in_preConditionStepList108);
            	    preconditionstep=preConditionStep();

            	    state._fsp--;

            	    adaptor.addChild(root_0, preconditionstep.getTree());
            	     retval.r_preconditionsteplist.add(preconditionstep.r_preconditionstep); 

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "preConditionStepList"

    public static class preConditionStep_return extends ParserRuleReturnScope {
        public PreConditionStep r_preconditionstep;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "preConditionStep"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:33:1: preConditionStep returns [PreConditionStep r_preconditionstep] : '-' systemaction= systemAction ';' ;
    public final ScenarioParser.preConditionStep_return preConditionStep() throws RecognitionException {
        ScenarioParser.preConditionStep_return retval = new ScenarioParser.preConditionStep_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal7=null;
        Token char_literal8=null;
        ScenarioParser.systemAction_return systemaction = null;


        Object char_literal7_tree=null;
        Object char_literal8_tree=null;

        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:34:2: ( '-' systemaction= systemAction ';' )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:34:4: '-' systemaction= systemAction ';'
            {
            root_0 = (Object)adaptor.nil();

            char_literal7=(Token)match(input,11,FOLLOW_11_in_preConditionStep127); 
            char_literal7_tree = (Object)adaptor.create(char_literal7);
            adaptor.addChild(root_0, char_literal7_tree);

            pushFollow(FOLLOW_systemAction_in_preConditionStep131);
            systemaction=systemAction();

            state._fsp--;

            adaptor.addChild(root_0, systemaction.getTree());
            char_literal8=(Token)match(input,15,FOLLOW_15_in_preConditionStep133); 
            char_literal8_tree = (Object)adaptor.create(char_literal8);
            adaptor.addChild(root_0, char_literal8_tree);

             retval.r_preconditionstep = new PreConditionStep(systemaction.r_systemaction); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "preConditionStep"

    public static class systemAction_return extends ParserRuleReturnScope {
        public SystemAction r_systemaction;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "systemAction"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:37:1: systemAction returns [SystemAction r_systemaction] : 'Executar' scenarioreference= scenarioReference ;
    public final ScenarioParser.systemAction_return systemAction() throws RecognitionException {
        ScenarioParser.systemAction_return retval = new ScenarioParser.systemAction_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal9=null;
        ScenarioParser.scenarioReference_return scenarioreference = null;


        Object string_literal9_tree=null;

        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:38:2: ( 'Executar' scenarioreference= scenarioReference )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:38:4: 'Executar' scenarioreference= scenarioReference
            {
            root_0 = (Object)adaptor.nil();

            string_literal9=(Token)match(input,16,FOLLOW_16_in_systemAction150); 
            string_literal9_tree = (Object)adaptor.create(string_literal9);
            adaptor.addChild(root_0, string_literal9_tree);

            pushFollow(FOLLOW_scenarioReference_in_systemAction154);
            scenarioreference=scenarioReference();

            state._fsp--;

            adaptor.addChild(root_0, scenarioreference.getTree());
             retval.r_systemaction = new SystemAction(scenarioreference.r_scenarioreference); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "systemAction"

    public static class scenarioReference_return extends ParserRuleReturnScope {
        public ScenarioReference r_scenarioreference;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "scenarioReference"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:41:1: scenarioReference returns [ScenarioReference r_scenarioreference] : usecasename= multiWordID '.' scenarioname= multiWordID ;
    public final ScenarioParser.scenarioReference_return scenarioReference() throws RecognitionException {
        ScenarioParser.scenarioReference_return retval = new ScenarioParser.scenarioReference_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal10=null;
        ScenarioParser.multiWordID_return usecasename = null;

        ScenarioParser.multiWordID_return scenarioname = null;


        Object char_literal10_tree=null;

        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:42:2: (usecasename= multiWordID '.' scenarioname= multiWordID )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:42:4: usecasename= multiWordID '.' scenarioname= multiWordID
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_multiWordID_in_scenarioReference173);
            usecasename=multiWordID();

            state._fsp--;

            adaptor.addChild(root_0, usecasename.getTree());
            char_literal10=(Token)match(input,17,FOLLOW_17_in_scenarioReference175); 
            char_literal10_tree = (Object)adaptor.create(char_literal10);
            adaptor.addChild(root_0, char_literal10_tree);

            pushFollow(FOLLOW_multiWordID_in_scenarioReference179);
            scenarioname=multiWordID();

            state._fsp--;

            adaptor.addChild(root_0, scenarioname.getTree());
             retval.r_scenarioreference = new ScenarioReference(usecasename.r_multiwordid, scenarioname.r_multiwordid); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "scenarioReference"

    public static class stepList_return extends ParserRuleReturnScope {
        public List<Step> r_steplist;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stepList"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:45:1: stepList returns [List<Step> r_steplist] : (s= step )+ ;
    public final ScenarioParser.stepList_return stepList() throws RecognitionException {
        ScenarioParser.stepList_return retval = new ScenarioParser.stepList_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ScenarioParser.step_return s = null;



         retval.r_steplist = new ArrayList<Step>(); 
        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:47:2: ( (s= step )+ )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:47:4: (s= step )+
            {
            root_0 = (Object)adaptor.nil();

            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:47:4: (s= step )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==INT) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:47:5: s= step
            	    {
            	    pushFollow(FOLLOW_step_in_stepList204);
            	    s=step();

            	    state._fsp--;

            	    adaptor.addChild(root_0, s.getTree());
            	     retval.r_steplist.add(s.r_step); 

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "stepList"

    public static class step_return extends ParserRuleReturnScope {
        public Step r_step;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "step"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:50:1: step returns [Step r_step] : (number= stepId actor= ACTOR action= ACTION i= item ';' | number= stepId multiplePaths );
    public final ScenarioParser.step_return step() throws RecognitionException {
        ScenarioParser.step_return retval = new ScenarioParser.step_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token actor=null;
        Token action=null;
        Token char_literal11=null;
        ScenarioParser.stepId_return number = null;

        ScenarioParser.item_return i = null;

        ScenarioParser.multiplePaths_return multiplePaths12 = null;


        Object actor_tree=null;
        Object action_tree=null;
        Object char_literal11_tree=null;

        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:51:2: (number= stepId actor= ACTOR action= ACTION i= item ';' | number= stepId multiplePaths )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==INT) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==17) ) {
                    int LA4_2 = input.LA(3);

                    if ( (LA4_2==ACTOR) ) {
                        alt4=1;
                    }
                    else if ( (LA4_2==18) ) {
                        alt4=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:51:4: number= stepId actor= ACTOR action= ACTION i= item ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_stepId_in_step225);
                    number=stepId();

                    state._fsp--;

                    adaptor.addChild(root_0, number.getTree());
                    actor=(Token)match(input,ACTOR,FOLLOW_ACTOR_in_step229); 
                    actor_tree = (Object)adaptor.create(actor);
                    adaptor.addChild(root_0, actor_tree);

                    action=(Token)match(input,ACTION,FOLLOW_ACTION_in_step233); 
                    action_tree = (Object)adaptor.create(action);
                    adaptor.addChild(root_0, action_tree);

                    pushFollow(FOLLOW_item_in_step237);
                    i=item();

                    state._fsp--;

                    adaptor.addChild(root_0, i.getTree());
                    char_literal11=(Token)match(input,15,FOLLOW_15_in_step239); 
                    char_literal11_tree = (Object)adaptor.create(char_literal11);
                    adaptor.addChild(root_0, char_literal11_tree);

                     retval.r_step = new SimpleStep(number.r_stepid, actor.getText(), action.getText(), i.r_item); 

                    }
                    break;
                case 2 :
                    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:52:3: number= stepId multiplePaths
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_stepId_in_step248);
                    number=stepId();

                    state._fsp--;

                    adaptor.addChild(root_0, number.getTree());
                    pushFollow(FOLLOW_multiplePaths_in_step250);
                    multiplePaths12=multiplePaths();

                    state._fsp--;

                    adaptor.addChild(root_0, multiplePaths12.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "step"

    public static class stepId_return extends ParserRuleReturnScope {
        public String r_stepid;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stepId"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:55:1: stepId returns [String r_stepid] : id= INT '.' ;
    public final ScenarioParser.stepId_return stepId() throws RecognitionException {
        ScenarioParser.stepId_return retval = new ScenarioParser.stepId_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token id=null;
        Token char_literal13=null;

        Object id_tree=null;
        Object char_literal13_tree=null;

         retval.r_stepid = new String(""); 
        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:57:2: (id= INT '.' )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:57:4: id= INT '.'
            {
            root_0 = (Object)adaptor.nil();

            id=(Token)match(input,INT,FOLLOW_INT_in_stepId272); 
            id_tree = (Object)adaptor.create(id);
            adaptor.addChild(root_0, id_tree);

             retval.r_stepid =  retval.r_stepid.concat(id.getText()); 
            char_literal13=(Token)match(input,17,FOLLOW_17_in_stepId276); 
            char_literal13_tree = (Object)adaptor.create(char_literal13);
            adaptor.addChild(root_0, char_literal13_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "stepId"

    public static class multiplePaths_return extends ParserRuleReturnScope {
        public MultiplePaths r_multiplepaths;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "multiplePaths"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/Scenario.g:62:1: multiplePaths returns [MultiplePaths r_multiplepaths] : 'Ha' quantity= INT 'caminhos' ':' pathlist= pathList ;
    public final ScenarioParser.multiplePaths_return multiplePaths() throws RecognitionException {
        ScenarioParser.multiplePaths_return retval = new ScenarioParser.multiplePaths_return();
        retval.start = input.LT(1);

        Object root_0 = null;
